Update author and title in index.html

--- a/index.html
+++ b/index.html
@@ -5,83 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="1st Graded Exercise" />
-  <meta name="author" content="Ella Ongkeko" />
+  <meta name="author" content="Sir Roy" />
   <meta name="keywords" content="HTML basic tags" />
   <meta name="author" content="Estelle Miranda S. Ongkeko" />
   <link rel="icon" href="images/pshslogo.ico" type="image/ico" sizes="16x16"> <!-- to add a site tab icon -->
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <title> 2nd Quarter Portfolio </title>
-  <style>
-      body {
-    font-family: 'Segoe UI', Arial, sans-serif;
-    margin: 0;
-    background-color: #f3f8fc;
-    color: #0f2e4d;
-  }
-
-  .site {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-
-  header {
-    background-color: #185485;
-    color: white;
-    padding: 20px 0;
-    text-align: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-
-  header h1 {
-    margin: 0;
-    font-size: 1.8em;
-  }
-
-  nav.primary {
-    margin-top: 10px;
-  }
-
-  nav.primary a {
-    color: #f3f8fc;
-    text-decoration: none;
-    padding: 10px 15px;
-    margin: 0 5px;
-    border-radius: 8px;
-    transition: 0.3s ease;
-  }
-
-  nav.primary a:hover {
-    background-color: #0f3960;
-  }
-
-  nav.primary a:visited {
-    color: #b9dcff;
-  }
-
-  main {
-    flex: 1;
-    padding: 40px;
-    text-align: center;
-  }
-
-  .hero p {
-    font-size: 1.2em;
-    background-color: white;
-    display: inline-block;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  }
-
-  footer {
-    background-color: #0f2e4d;
-    color: white;
-    text-align: center;
-    padding: 15px 0;
-    font-size: 0.9em;
-  }
-  </style>
+<title> our favorite foods !! </title>
 </head>
 
 <body>
@@ -89,13 +18,11 @@
 <header>
 <div class="header-inner">
 <div>
-<h1>My Portfolio — 2nd Quarter</h1>
+<h1>My Portfolio — 3rd Quarter</h1>
 
 <nav class="primary" id="primaryNav" aria-label="Primary">
-<a href="./public/homepage.html">First Graded</a>
-<a href="./public/Q21NGBerylliumOngkeko.html">First Non-Graded</a>
-<a href="./public/homepage.html">Second Graded</a>
-<a href="./public/third-graded.html">Third Graded</a>
+<a href="CS3_3RDQTRPORTFOLIO\Q3_2GBerylliumOngkeko.html">Second Graded</a>
+
 <a href="./public/project-access.html">Access to Our Project</a>
 </nav>
 </div>
